--- a/front-end/src/app/forms/sched-c/endorser/endorser.component.html
+++ b/front-end/src/app/forms/sched-c/endorser/endorser.component.html
@@ -17,7 +17,7 @@
   <ngb-highlight [result]="formatTypeaheadCandidate(r)" [term]="t"></ngb-highlight>
 </ng-template>
 
-<div class="add_new_contact-container">
+<div class="add_new_endorser-container">
   <form [formGroup]="endorserForm">
     <header>
       <div class="header-content">
@@ -285,10 +285,10 @@
                 Cancel
               </button>
               
-              <button class="btn btn-previous btn-right" type="button"  (click)="goToEndorserSummary()">
+              <button class="btn btn-secondary btn-right" type="button"  (click)="goToEndorserSummary()">
                 Endorser Summary
               </button>
-              <button class="btn btn-primary btn-right" type="button"  (click)="saveEndorser(false)">
+              <button class="btn btn-secondary btn-right" type="button"  (click)="saveEndorser(false)">
                 Save
               </button>
               <button class="btn btn-secondary btn-right" type="button" (click)=saveEndorser(true)>
