--- a/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.scss
+++ b/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.scss
@@ -82,6 +82,57 @@
     }
   }
 
+  /* arrow common style */
+  .arrow {
+    // display: inline-block;
+    width: 5px;
+    height: 5px;
+    margin-top:  0.4rem;
+    border-top: 0.2rem solid #112E51;
+    border-right: 0.2rem solid #112E51;
+    margin-right: 1rem;
+    float: right;
+  }
+  .arrow-top {
+    transform: rotate(-45deg);
+  }
+  .arrow-right {
+    transform: rotate(45deg);
+  }
+  .arrow-bottom {
+    transform: rotate(135deg);
+  }
+  .arrow-left {
+    transform: rotate(-135deg);
+  }
+  .arrow-top-narrow {
+    transform: rotate(-45deg) skew(-15deg, -15deg);
+  }
+  .arrow-top-wide {
+    transform: rotate(-45deg) skew(7deg, 7deg);
+  }
+  .arrow-top-left {
+    transform: rotate(-90deg) skew(-10deg, -10deg);
+  }
+  .arrow-top-right {
+    transform: rotate(0) skew(-10deg, -10deg);
+  }
+  .arrow-bottom-left {
+    transform: rotate(180deg) skew(-10deg, -10deg);
+  }
+  .arrow-bottom-right {
+    transform: rotate(90deg) skew(-10deg, -10deg);
+  }
+
+  .parent:hover{
+    cursor: pointer !important;
+  }
+
+  .child-bg {
+    padding-left: 80px;
+    background-color: #D9EDF6!important;
+  }
+
   // .loanSumamry__total-amount-container {
   //   margin: 1.5em 0;
   // }
