some bug fixes from QA testing

--- a/front-end/src/app/forms/sched-c/endorser/endorser.component.html
+++ b/front-end/src/app/forms/sched-c/endorser/endorser.component.html
@@ -284,10 +284,9 @@
               <button class="btn btn-previous btn-left" type="button" (click)="cancelStep()">
                 Cancel
               </button>
-              
-              <button class="btn btn-secondary btn-right" type="button"  (click)="goToEndorserSummary()">
+<!--               <button class="btn btn-secondary btn-right" type="button"  (click)="goToEndorserSummary()">
                 Endorser Summary
-              </button>
+              </button> -->
               <button class="btn btn-secondary btn-right" type="button"  (click)="saveEndorser(false)">
                 Save
               </button>
