--- a/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.html
+++ b/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.html
@@ -8,9 +8,9 @@
 </div>
 <div class="loanSumamry__table-container">
   <div class="grid-row float-right loanSumamry__page-item-range">
-    <div class="float-right loanSumamry__item-range">
+    <!-- <div class="float-right loanSumamry__item-range">
       {{determineItemRange()}} of {{LoanModel?.length}}
-    </div>
+    </div> -->
   </div>
   <table class="table table-striped table-hover table__sortable loanSumamry__table">
     <thead>
@@ -58,7 +58,7 @@
               <i class="trash-icon"></i>
             </button>
           </div>
-        </th>6
+        </th>
       </tr>
     </thead>
     <tbody>
