update entry format to string to number

--- a/front-end/src/app/forms/sched-h3/sched-h3.component.html
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.html
@@ -322,7 +322,7 @@
                     {{ item.transferred_amount | currency: 'USD':'symbol-narrow':'1.2-2' }}
                   </td>
                   <td class="summary_text_amt">
-                    {{ item.aggregate_amount | currency: 'USD':'symbol-narrow':'1.2-2' }}
+                    {{ item.aggregate_amount }}
                   </td>
 
                   <td class="bulk_action">
