--- a/front-end/src/app/forms/sched-h5/sched-h5.component.html
+++ b/front-end/src/app/forms/sched-h5/sched-h5.component.html
@@ -239,7 +239,7 @@
                   </td>
                   <td>{{ report.account_name }}</td>
                   <td class="summary_text_amt">
-                    {{ report.transferred_amount | currency: 'USD':'symbol-narrow':'1.2-2' }}
+                    {{ report.transferred_amount }}
                   </td>
                 </tr>
               </ng-container>
