--- a/front-end/src/app/forms/sched-c/endorser-summary/endorser-summary.component.html
+++ b/front-end/src/app/forms/sched-c/endorser-summary/endorser-summary.component.html
@@ -6,9 +6,9 @@
  </div>
  <div  class="endorserSummary__table-container">
   <div class="grid-row float-right endorserSummary__page-item-range">
-    <div class="float-right endorserSummary__item-range">
+<!--     <div class="float-right endorserSummary__item-range">
       {{determineItemRange()}} of {{endorserModel?.length}}
-    </div>
+    </div> -->
   </div>
   <table class="table table-striped table-hover table__sortable endorserSummary__table">
     <thead>
@@ -46,15 +46,15 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let ln of endorserModel | paginate: {itemsPerPage: 10, currentPage: currentPageNumber}">
+      <tr *ngFor="let end of endorserModel | paginate: {itemsPerPage: 10, currentPage: currentPageNumber}">
         <td>
-          <input [(ngModel)]="ln.selected" type="checkbox" (click)="checkForMultiChecked($event)">
+          <input [(ngModel)]="end.selected" type="checkbox" (click)="checkForMultiChecked($event)">
         </td>
-        <!-- <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{ln.entity_type === 'IND' ? ln.last_name + ', ' + ln.first_name : ln.entity_nm}}</td> -->
-        <td [@fadeInOut]>{{ln.name}}</td>
-        <td [@fadeInOut] >{{ln.contribution_amount | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
-        <td [@fadeInOut] >{{ln.employer}}</td>
-        <td [@fadeInOut] >{{ln.occupation}}</td>        
+        <!-- <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{end.entity_type === 'IND' ? end.last_name + ', ' + end.first_name : end.entity_nm}}</td> -->
+        <td [@fadeInOut]>{{end.name}}</td>
+        <td [@fadeInOut] >{{end.contribution_amount | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
+        <td [@fadeInOut] >{{end.employer}}</td>
+        <td [@fadeInOut] >{{end.occupation}}</td>        
 
         <td>
           <div [@fadeInOut] class="btn-group" ngbDropdown role="group"
@@ -63,13 +63,13 @@
               <i class="ellipsis-icon"></i>
             </button>
             <div id="endorserSummary__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
-              <button class="dropdown-item" (click)="editEndorser(ln)">
+              <button class="dropdown-item" (click)="editEndorser(end)">
                 <i class="edit-icon"></i> Edit
               </button>
-              <button class="dropdown-item" (click)="printLoan(ln)">
+              <button class="dropdown-item" (click)="printLoan(end)">
                 <i class="print-icon"></i> Print
               </button>
-              <button *ngIf="ln.activeTransactionsCnt == 0" class="dropdown-item" (click)="trashendorserSummary(ln)">
+              <button class="dropdown-item" (click)="trashEndorser(end)">
                 <i class="trash-icon"></i> Trash
               </button>
             </div>
@@ -88,7 +88,7 @@
 
     <div class="grid-row">
       <div class="grid-row__col grid-row__col--12 ">
-        <div class="forms__btn-container pr-4">
+        <div class="forms__btn-container pr-5">
           <button class="btn btn-primary btn-right" type="button"  (click)="goToC1()">
             Next
           </button>
