--- a/front-end/src/app/forms/sched-h3/sched-h3.component.html
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.html
@@ -144,12 +144,6 @@
                   [style.width]="'50%'"
                   [style.height]="'30px'"
                   [attr.readonly]="true"
-                  [ngClass]="
-                    frmIndividualReceipt.get('date')?.invalid &&
-                    (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                      ? 'input-field-error'
-                      : ''
-                  "
                 />
               </div>
             </div>
@@ -227,6 +221,9 @@
                       : ''
                   "
                 />
+              </div>
+              <div class="text-error text-left" *ngIf="transferredAmountErr">
+                Please enter a valid amount.
               </div>
             </div>
           </div>
