--- a/front-end/src/app/forms/sched-h6/sched-h6.component.html
+++ b/front-end/src/app/forms/sched-h6/sched-h6.component.html
@@ -95,7 +95,7 @@
               <tr>                
                 <td class="summary_text_level_3">
                   <input type="radio" formControlName="type" value="ALLOC_FEA_VOID" id="h6Opt4" (click)="selectTypeChange($event)">
-                  <label for="oh6Opt4">Void of Allocated FEA Expenditure</label>
+                  <label for="h6Opt4">Void of Allocated FEA Expenditure</label>
                   <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                       tooltipClass="form-tooltip">
                       <i class="info-icon" aria-hidden="true"></i>
